--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,227 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <h1 class="title">🎟️ Ticket Mania</h1>
+    <h3
+      style="
+        background: #f1c40f;
+        padding: 10px;
+        border-radius: 5px;
+        color: black;
+      "
+    >
+      ⚠️ Tickets are stored in the cloud - SFW please
+    </h3>
+    <div class="pages">
+      <div class="block">
+        <h1>Create Ticket</h1>
+        <br />
+        <form action="">
+          <p>Name:</p>
+          <input type="text" id="name" placeholder="Sam Gehly" />
+          <br />
+          <p>Task:</p>
+          <input type="text" id="task" placeholder="Assignment A2" />
+          <br />
+          <p>Priority:</p>
+          <select id="priority">
+            <option value="high">High</option>
+            <option value="medium">Medium</option>
+            <option value="low">Low</option>
+          </select>
+          <br /><br />
+          <button>Submit Ticket</button>
+        </form>
+      </div>
+      <div class="spacer"></div>
+      <div class="block">
+        <h1>Tickets</h1>
+        <h3>
+          You can edit the name, task, and priority of any ticket by clicking on
+          them.
+        </h3>
+        <table>
+          <thead>
+            <tr>
+              <th></th>
+              <th>ID</th>
+              <th>Name</th>
+              <th>Task</th>
+              <th>Priorty</th>
+              <th>Due Date</th>
+              <th>Operations</th>
+            </tr>
+          </thead>
+          <tbody id="items"></tbody>
+        </table>
+      </div>
+    </div>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
   <script>
+    const processData = (json) => {
+      console.log(json);
+      const items = document.getElementById("items");
+      items.innerHTML = "";
+      json.forEach((item) => {
+        var dueDate = moment(item._createdOn);
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
+        const priorityMap = {
+          high: 1,
+          medium: 3,
+          low: 5,
+        };
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+        dueDate.add(priorityMap[item.priority] + 1, "days");
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
+        var now = moment();
+        items.innerHTML += `
+        <tr>
+          <td style="background-color:${item.color || "transparent"}"></td>
+          <td style="opacity:0.8">${item._id || "Unknown ID"}</td>
+          <td><input id="name-${item._id}" value="${
+          item.name || "Anonymous"
+        }"></td>
+          <td><input id="task-${item._id}" value="${
+          item.task || "Unknown Task"
+        }"></td>
+          <td><select id="priority-${item._id}">
+            <option value="high" ${
+              item.priority == "high" ? "selected" : null
+            }>High</option>
+            <option value="medium" ${
+              item.priority == "medium" ? "selected" : null
+            }>Medium</option>
+            <option value="low" ${
+              item.priority == "low" ? "selected" : null
+            }>Low</option>
+          </select></td>
+          <td style="opacity:0.8">${dueDate.diff(now, "days")} days</td>
+          <td><button class="saveButton" id="${
+            item._id
+          }-save">Save</button><div class="spacerMini"></div><button class="deleteButton" id="${
+          item._id
+        }-delete">Delete</button></td>
+        </tr>
+        `;
+      });
+    };
 
-    return false
-  }
+    const disableBody = () => {
+      document.body.setAttribute("style", "pointer-events:none;opacity:0.4");
+    };
+    const enableBody = () => {
+      document.body.setAttribute("style", "pointer-events:auto;opacity:1");
+    };
+    const deleteEntry = (e) => {
+      e.preventDefault();
 
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
+      const id = e.target.getAttribute("id").split("-")[0];
 
+      const json = {
+          delete: true,
+          id,
+        },
+        body = JSON.stringify(json);
+
+      disableBody();
+
+      fetch("/submit", {
+        method: "POST",
+        body,
+      })
+        .then((response) => response.json())
+        .then((json) => {
+          // do something with the reponse
+          processData(json);
+          name.value = "";
+          task.value = "";
+          enableBody();
+        });
+
+      return false;
+    };
+
+    const editEntry = (e) => {
+      e.preventDefault();
+
+      const id = e.target.getAttribute("id").split("-")[0];
+
+      const name = document.querySelector(`#name-${id}`),
+        task = document.querySelector(`#task-${id}`),
+        priority = document.querySelector(`#priority-${id}`),
+        json = {
+          name: name.value,
+          task: task.value,
+          priority: priority.value,
+          id,
+        },
+        body = JSON.stringify(json);
+      disableBody();
+      fetch("/submit", {
+        method: "POST",
+        body,
+      })
+        .then((response) => response.json())
+        .then((json) => {
+          // do something with the reponse
+          processData(json);
+          name.value = "";
+          task.value = "";
+          enableBody();
+        });
+
+      return false;
+    };
+
+    const submit = function (e) {
+      // prevent default form action from being carried out
+      e.preventDefault();
+
+      const name = document.querySelector("#name"),
+        task = document.querySelector("#task"),
+        priority = document.querySelector("#priority"),
+        json = { name: name.value, task: task.value, priority: priority.value },
+        body = JSON.stringify(json);
+
+      disableBody();
+      fetch("/submit", {
+        method: "POST",
+        body,
+      })
+        .then((response) => response.json())
+        .then((json) => {
+          // do something with the reponse
+          processData(json);
+          name.value = "";
+          task.value = "";
+          enableBody();
+        });
+
+      return false;
+    };
+
+    window.onload = function () {
+      const button = document.querySelector("button");
+      button.onclick = submit;
+
+      fetch("/api/getData")
+        .then((response) => response.json())
+        .then((json) => processData(json));
+
+      document.addEventListener("click", function (e) {
+        if (e.target && e.target.classList[0] == "deleteButton") {
+          deleteEntry(e);
+        }
+        if (e.target && e.target.classList[0] == "saveButton") {
+          editEntry(e);
+        }
+      });
+    };
   </script>
 </html>
