--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,70 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
-  </body>
-  <script>
+    <head>
+        <title>CS4241 Assignment 2</title>
+        <meta charset="utf-8">
+        <link type="text/css" rel="stylesheet" href="css/style.css">
+        <script src="js/scripts.js"></script>
+    </head>
+    <body>
+        <h1>FPS Stat Calculator</h1>
+        <div class="appgrid">
+            <!-- Form for adding an item -->
+            <form class="app-item" id="add" action="">
+                <h3>Add new stats</h3>
+                <label for="kills"># Kills</label>
+                <input type="text" id="kills">
+                <br>
+                <label for="assists"># Assists</label>
+                <input type="text" id="assists">
+                <br>
+                <label for="deaths"># Deaths</label>
+                <input type="text" id="deaths">
+                <!--
+                The following source was used to learn about different button types:
+                https://www.w3schools.com/tags/att_button_formmethod.asp
+                -->
+                <button type="button" onclick="handle_add()">Add</button>
+            </form>
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
+            <!-- Table for displaying all stats-->
+            <table class="app-item" id="results">
+                <tr>
+                    <th>ID #</th>
+                    <th>Kills</th>
+                    <th>Assists</th>
+                    <th>Deaths</th>
+                    <th>K/D Ratio</th>
+                    <th>A/D Ratio</th>
+                </tr>
+            </table>
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+            <!-- Form for modify a row in the table -->
+            <form class="app-item" id="modify" action="">
+                <h3>Modify row of stats</h3>
+                <label for="id_num">ID #</label>
+                <input type="text" id="id_num">
+                <br>
+                <label for="modify_kills"># Kills</label>
+                <input type="text" id="modify_kills">
+                <br>
+                <label for="modify_assists"># Assists</label>
+                <input type="text" id="modify_assists">
+                <br>
+                <label for="modify_deaths"># Deaths</label>
+                <input type="text" id="modify_deaths">
+                <button type="button" onclick="handle_modify()">Modify</button>
+            </form>
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
+            <div></div>
 
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+            <!-- Form for modify a row in the table -->
+            <form class="app-item" id="delete" action="">
+                <h3>Delete row of stats</h3>
+                <label for="delete_id_num">ID #</label>
+                <input type="text" id="delete_id_num">
+                <button type="button" onclick="handle_delete()">Delete</button>
+            </form>
+        </div>
+    </body>
 </html>
