--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link type="text/css" rel="stylesheet" href="css/style.css">
         <script src="js/scripts.js"></script>
     </head>
-    <body>
+    <body onload="getLatestTable()">
         <h1>FPS Stat Calculator</h1>
         <div class="appgrid">
             <!-- Form for adding an item -->
@@ -29,14 +29,17 @@
 
             <!-- Table for displaying all stats-->
             <table class="app-item" id="results">
-                <tr>
-                    <th>ID #</th>
-                    <th>Kills</th>
-                    <th>Assists</th>
-                    <th>Deaths</th>
-                    <th>K/D Ratio</th>
-                    <th>A/D Ratio</th>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>ID #</th>
+                        <th>Kills</th>
+                        <th>Assists</th>
+                        <th>Deaths</th>
+                        <th>K/D Ratio</th>
+                        <th>A/D Ratio</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
             </table>
 
             <!-- Form for modify a row in the table -->
