adding some link references to help with the project

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     })
     .then( function( response ) {
       // do something with the reponse (if status ok then add data to ds and display, else show error signal)
+      // https://developer.mozilla.org/en-US/docs/Web/API/Document/createTextNode use this to add lines to page
+      // notes on fetch (for getting data from server): https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch
+      
       console.log( response )
     })
 
