--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,9 @@
                 </thead>
                 <tbody></tbody>
             </table>
+
+            <button type="button" onclick="handle_csv()">CSV</button>
+
         </div>
     </body>
 </html>
