--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <body>
       <div id = "gameWindow"></div>
+      <p id = "score">Score = 0</p>
     <form action="">
       <input type='text' id='yourname' value="your name here">
       <button>submit</button>
