modified for adding player

--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,42 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
+    <title>Roster Builder</title>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <h1 id="header"> Roster Builder </h1>
+    
+    <div id="userInput">
+      <form action="">
+        <input type='text' id='number' value="Number">
+        <input type='text' id='firstName' value="First Name">
+        <input type='text' id='lastName' value="Last Name">
+
+        <button>Add Player</button>
+      </form>
+    </div>
+    
+    <!-- roster builder - add, remove players to roster (team name, number, first and last name)
+      search bar for player name, player card, add team with stats, delete stats -->
   </body>
   <script>
 
-  const submit = function( e ) {
+  const addPlayer = function( e ) {
     // prevent default form action from being carried out
     e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+    const number = document.querySelector( '#number' ).value,
+    const firstName = document.querySelector( '#firstName' ).value,
+    const lastName = document.querySelector( '#lastName' ).value,
+    const input = { 'number': number, 'firstName': firstName, 'lastName': lastName }
+    console.log(firstName)
+    body = JSON.stringify( input )
 
-    fetch( '/submit', {
+    fetch( '/addPlayer', {
       method:'POST',
+
       body 
     })
     .then( function( response ) {
@@ -34,7 +49,8 @@
 
   window.onload = function() {
     const button = document.querySelector( 'button' )
-    button.onclick = submit
+    button.onclick = addPlayer
+    localStorage.clear();
   }
 
   </script>
