--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,40 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <input type='text' id='yourage' value="your age here">
-      <input type='text' id='yourschool' value="your school here">
-      <button>submit</button>
-    </form>
-  </body>
-  <script>
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
+<head>
+  <title>CS4241 Assignment 2</title>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" />
+  <script src="js/scripts.js"></script>
+</head>
 
-    const nameinput = document.querySelector( '#yourname' ),
-          ageinput = document.querySelector( '#yourage' ),
-          schoolinput = document.querySelector( '#yourschool' ),
-          json = { yourname: nameinput.value , yourage: ageinput.value , yourschool: schoolinput.value },
-          body = JSON.stringify( json )
+<body>
+  <div class="grid-container">
+    <div class="header">
+      <h1>Billbo Swaggins' Car Dealership Inventory</h1>
+    </div>
+    <div class="left">
+      <form id="mainForm" action="">
+        <input type='text' id='vehiclemake' placeholder="Vehicle Make Here">
+        <input type='text' id='vehiclemodel' placeholder="Vehicle Model Here">
+        <input type='text' id='vehicleyear' placeholder="Vehicle Year Here">
+        <button>Submit</button>
+      </form>
+    </div>
+    <div class="content">
+      <table id="resultsTable">
+        <tr>
+          <th>Make</th>
+          <th>Model</th>
+          <th>Year</th>
+          <th>Age</th>
+        </tr>
+      </table>
+    </div>
+  </div>
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse (if status ok then add data to ds and display, else show error signal)
-      // https://developer.mozilla.org/en-US/docs/Web/API/Document/createTextNode use this to add lines to page
-      // notes on fetch (for getting data from server): https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch
-      
-      console.log( response )
-    })
+</body>
 
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
