--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
     <head>
         <title>CS4241 Assignment 2</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/91e071f40d.js" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <section class="hero is-dark is-fullheight">
             <!-- Hero head: will stick at the top -->
-            <div class="hero-head">
+            <div class="hero-head" id="copyOFFSET">
                 <header class="navbar">
                     <div class="container navbar-start">
                         <a href="index.html" class="navbar-item is-active">Design
@@ -22,8 +22,9 @@
                 </header>
             </div>
             <!-- Hero content: will be in the middle -->
-            <div class="hero-body">
-                <div class="container" id="threejs canvas"></div>
+            <div class="hero-body" id="copySIZE">
+            </div>
+            <div class="cheat-time" id="threeJS" style="position: absolute">
             </div>
             <!-- Hero footer: will stick at the bottom -->
             <div class="hero-foot">
@@ -151,4 +152,5 @@
         </div>
     </body>
     <script src="js/scripts.js"></script>
+    <script type="module" src="js/render.js"></script>
 </html>
