html and css basic stuff, no server modifications yet

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,46 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="C:\Users\madel\Desktop\a2-madmadeline\a2-madmadeline\public\css\style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:wght@600&display=swap" rel="stylesheet">
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
   </head>
+
+  <h1>
+    <section class = "container">
+    <img src = "tomato.png">
+  <span id = "box">- Grocery Manager -</span> 
+   <img src = "snack.png">
+
+  </h1>
+
+
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+    <h2>
+    <form action="" method = "POST">
+      <input type='text' id='item' value="item name">
+      <input type = 'text' id = 'price' value = 'price'>
+      <select name = 'department'>
+        <option value = "produce">produce</option>
+        <option value = "meat">meat</option>
+        <option value = "dairy">dairy</option>
+        <option value = "pantry">pantry</option>
+        <option value = "bakery">bakery</option>
+        <option value = "frozen">frozen</option>
+        <option value = "seafood">seafood</option>
+        <option value = "deli">deli</option>
+        <option value = "other">other</option>
+    </select>
+      <button>add</button>
     </form>
+    <form>
+      
+    </form>
+  </h2>
+  <h3>
+    Your List:
+  </h3>
   </body>
   <script>
 
