--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,86 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
-  </body>
-  <script>
 
-  const submit = function( e ) {
+<head>
+  <title>CS4241 Assignment 2</title>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/scripts.js"></script>
+</head>
+<body>
+
+  <form action="">
+    <label for="taskName">Task Name:</label><br>
+    <input type="text" id="taskName" name="taskName"><br>
+
+    <label for="priorty">Priorty:</label><br>
+    <input type="text" id="priority" name="priorty"><br>
+
+    <label for="creationDate">Creation Date:</label><br>
+    <input type="text" id="creationDate" name="creationDate"><br>
+
+    <button>Submit</button>
+  </form>
+
+  <h1>My Todo List</h1>
+    <table class="center">
+      <thead>
+      <tr>
+        <th>Task Name</th>
+        <th>Priority</th>
+        <th>Creation Date</th>
+        <th>Deadline</th>
+      </tr>
+      </thead>
+    </table>
+  </body>
+
+<script>
+  const submit = function (e) {
     // prevent default form action from being carried out
     e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+    const input = document.querySelector('#taskName');
+    const priority = document.querySelector('#priority');
+    const creationDate = document.querySelector('#creationDate');
+    let dueDate = "";
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
+    json = { taskName: input.value, priority: priority.value, creationDate: creationDate.value, dueDate: ""};
+    body = JSON.stringify(json);
 
+    fetch('/submit', {
+      method: 'POST',
+      body
+    })
+      .then(function (response) {
+        return response.text();
+      })
+      .then ( function ( txt ){
+        txt = JSON.parse(txt);        
+        let table = document.querySelector("table");
+        createTable(table, txt);
+      })
     return false
   }
 
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
+function createTable(table, data) {
+  for (let word of data) {
+    let row = table.insertRow();
+    for (i in word) {
+      let cell = row.insertCell();
+      let cellContents = document.createTextNode(word[i]);
+      cell.appendChild(cellContents);
+    }
+  }
+}
+
+
+  window.onload = function () {
+    const button = document.querySelector('button')
     button.onclick = submit
   }
 
-  </script>
+</script>
+
 </html>
