--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
             </div> 
        
             <div class="html-form-details text-input">
-              <label for="orderDescription" class="form-label">Custom order instructions:</label>
+              <label for="orderDescription" class="form-label">Custom order instructions: List specific flower.</label>
               <textarea id="orderDescription" required></textarea>
             </div>            
             <div class="html-form-details" role="radiogroup" aria-label="flower-level">
@@ -139,7 +139,7 @@
 
 
             <div class="html-form-details">
-              <label for="updateOrder" class="form-label">Custom Order Instructions:</label>
+              <label for="updateOrder" class="form-label">Custom Order Instructions: List specific flower.</label>
               <textarea id="updateOrder" required></textarea>
             </div>
 
